pi-hole/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-admin
  namespace: pihole-namespace
spec:
  replacePathRegex:
    regex: ^/$
    replacement: /admin
