pi-hole/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
      containers:
        - name: pihole
          image: pihole/pihole
          readinessProbe:
            httpGet:
              path: /admin
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /admin
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: pihole-etc
              mountPath: /etc/pihole
            - name: pihole-dnsmasq
              mountPath: /etc/dnsmasq.d
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: pihole-dnsmasq
          persistentVolumeClaim:
            claimName: pihole-dnsmasq
