pi-hole/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole-namespace
spec:
  selector:
    app: pihole
  type: LoadBalancer
  externalIPs: 
    - 192.168.77.170
  ports:
    - name: http
      port: 8081
      targetPort: 80
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
  readinessProbe:
          httpGet:
            path: /admin/index.php
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
  livenessProbe:
    httpGet:
      path: /admin/index.php
      port: 80
    initialDelaySeconds: 60
    periodSeconds: 10
